--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,18 @@
     }
   },
   "scripts": {
+    "post-create-project-cmd": [
+      "@php -r \"file_exists('.env') || copy('.env.example.dev', '.env');\"",
+      "echo 'Renaming ddev project to prevent conflicts'",
+      "sed -i 's/name: craft-starter/name: change-me/' .ddev/config.yaml",
+      "echo 'Cleaning composer.json'",
+      "@composer config --unset scripts.post-create-project-cmd",
+      "@composer config --unset name",
+      "@composer config --unset license",
+      "@composer config --unset type",
+      "@composer update",
+      "@composer dump-autoload -o"
+    ],
     "post-root-package-install": [
       "@php -r \"file_exists('.env') || copy('.env.example.dev', '.env');\""
     ]
