Use PHP script to rename DDEV

--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
     "post-create-project-cmd": [
       "@php -r \"file_exists('.env') || copy('.env.example.dev', '.env');\"",
       "echo 'Renaming ddev project to prevent conflicts'",
-      "sed -i 's/name: craft-starter/name: change-me/' .ddev/config.yaml",
+      "@php install-scripts/rename-ddev.php",
       "echo 'Cleaning composer.json'",
       "@composer config --unset scripts.post-create-project-cmd",
       "@composer config --unset name",
