[#1] Require nystudio107/craft-vite:^5.0.0 package.

--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
   "prefer-stable": true,
   "require": {
     "craftcms/cms": "^5.0.0",
+    "nystudio107/craft-vite": "^5.0.0",
     "vlucas/phpdotenv": "^5.4.0"
   },
   "require-dev": {
