--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
+    "postcss-pxtorem": "^6.1.0",
     "tailwindcss": "^3.4.3",
     "vite": "^5.2.0"
   }
