--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
+    "cssnano": "^7.0.1",
     "postcss": "^8.4.38",
     "postcss-pxtorem": "^6.1.0",
     "tailwindcss": "^3.4.3",
