--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.19",
+    "cssnano": "^7.0.1",
+    "postcss": "^8.4.38",
+    "postcss-pxtorem": "^6.1.0",
+    "tailwindcss": "^3.4.3",
     "vite": "^5.2.0"
   }
 }
