--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cssnano": "^7.0.1",
     "postcss": "^8.4.38",
     "postcss-pxtorem": "^6.1.0",
+    "prettier": "3.2.5",
     "tailwindcss": "^3.4.3",
     "vite": "^5.2.0"
   }
