--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "craft-starter",
+  "name": "craft-stajrter",
   "version": "1.0.0",
   "author": "Viget <craft@viget.com>",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write ."
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
