--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "lint": "eslint --fix src",
     "format": "prettier --write ."
   },
   "devDependencies": {
+    "@eslint/js": "^9.3.0",
     "autoprefixer": "^10.4.19",
     "cssnano": "^7.0.1",
+    "eslint-config-prettier": "^9.1.0",
+    "globals": "^15.3.0",
     "postcss": "^8.4.38",
     "postcss-pxtorem": "^6.1.0",
     "prettier": "3.2.5",
