[#3] Install PHP ECS and run fix

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "vlucas/phpdotenv": "^5.4.0"
   },
   "require-dev": {
+    "craftcms/ecs": "dev-main",
     "craftcms/generator": "^2.0.0",
     "yiisoft/yii2-shell": "^2.0.3"
   },
@@ -44,6 +45,8 @@
     ],
     "post-root-package-install": [
       "@php -r \"file_exists('.env') || copy('.env.example.dev', '.env');\""
-    ]
+    ],
+    "ecs-check": "ecs check --ansi",
+    "ecs-fix": "ecs check --ansi --fix"
   }
 }
