[#3] Automatic code formatting & linting (#12)
* [#3] Add prettier and .editorconfig

* [#3] Run `prettier . --write`

* [#3] Install & configure eslint

* [#3] Install PHP ECS and run fix

* [#3] Install and configure PHPStan

* [#3] Install Husky

- npm install --save-dev husky
- npx husky init

Add DDEV configs to ensure Husky is connected to the user & DDEV's Git processes

* [#3] Install & configure lint-staged

This runs our linters & formatters on just the files that have changed.

* [#3] eslint disallow console.log

* [#3] Remove npm run prepare from ddev.

Apparently `prepare` runs after each npm install.

https://typicode.github.io/husky/how-to.html#manual-setup

* [#3] PR Feedback

--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -1,18 +1,23 @@
 name: craft-starter
 type: craftcms
 docroot: web
-php_version: "8.2"
+php_version: '8.2'
 webserver_type: nginx-fpm
 xdebug_enabled: false
 additional_hostnames: []
 additional_fqdns: []
 database:
-    type: mysql
-    version: "8.0"
+  type: mysql
+  version: '8.0'
 use_dns_when_possible: true
-composer_version: "2"
+composer_version: '2'
 web_environment: []
-nodejs_version: "18"
+nodejs_version: '18'
+hooks:
+  post-start:
+    - composer: install
+    # Ensures that lint-staged runs properly in ddev container
+    - exec: git config --global --add safe.directory /var/www/html
 web_extra_exposed_ports:
   # Expose ports for vite
   - name: vite
@@ -24,7 +29,6 @@ web_extra_daemons:
   - name: 'vite'
     command: 'npm install && npm run dev'
     directory: /var/www/html
-
 # Key features of ddev's config.yaml:
 
 # name: <projectname> # Name of the project, automatically provides
@@ -61,7 +65,7 @@ web_extra_daemons:
 # "ddev xhprof" to enable xhprof and "ddev xhprof off" to disable it work better,
 # as leaving xhprof enabled all the time is a big performance hit.
 
-# webserver_type: nginx-fpm, apache-fpm, or nginx-gunicorn 
+# webserver_type: nginx-fpm, apache-fpm, or nginx-gunicorn
 
 # timezone: Europe/Berlin
 # This is the timezone used in the containers and by PHP;
@@ -103,7 +107,7 @@ web_extra_daemons:
 # Please take care with this because it can cause great confusion.
 
 # upload_dirs: "custom/upload/dir"
-#    
+#
 # upload_dirs:
 #   - custom/upload/dir
 #   - ../private
