--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
     "vlucas/phpdotenv": "^5.4.0"
   },
   "require-dev": {
+    "craftcms/ecs": "dev-main",
     "craftcms/generator": "^2.0.0",
+    "craftcms/phpstan": "dev-main",
     "yiisoft/yii2-shell": "^2.0.3"
   },
   "autoload": {
@@ -44,6 +46,9 @@
     ],
     "post-root-package-install": [
       "@php -r \"file_exists('.env') || copy('.env.example.dev', '.env');\""
-    ]
+    ],
+    "ecs-check": "ecs check --ansi",
+    "ecs-fix": "ecs check --ansi --fix",
+    "phpstan": "phpstan --memory-limit=1G"
   }
 }
