--- a/package.json
+++ b/package.json
@@ -6,13 +6,22 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint --fix src",
+    "format": "prettier --write .",
+    "prepare": "husky"
   },
   "devDependencies": {
+    "@eslint/js": "^9.3.0",
     "autoprefixer": "^10.4.19",
     "cssnano": "^7.0.1",
+    "eslint-config-prettier": "^9.1.0",
+    "globals": "^15.3.0",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
     "postcss": "^8.4.38",
     "postcss-pxtorem": "^6.1.0",
+    "prettier": "3.2.5",
     "tailwindcss": "^3.4.3",
     "vite": "^5.2.0"
   }
