--- a/.env.example.dev
+++ b/.env.example.dev
@@ -7,6 +7,14 @@ CRAFT_APP_ID=
 # The environment Craft is currently running in (dev, staging, production, etc.)
 CRAFT_ENVIRONMENT=dev
 
+# Email
+SYSTEM_EMAIL_ADDRESS=craft@viget.com
+SYSTEM_EMAIL_SENDER="Craft CMS"
+SYSTEM_EMAIL_HOSTNAME=
+SYSTEM_EMAIL_PORT=
+SYSTEM_EMAIL_USERNAME=
+SYSTEM_EMAIL_PASSWORD=
+
 # Database connection settings
 CRAFT_DB_DRIVER=mysql
 CRAFT_DB_SERVER=127.0.0.1
