--- a/.env.example.staging
+++ b/.env.example.staging
@@ -7,6 +7,13 @@ CRAFT_APP_ID=
 # The environment Craft is currently running in (dev, staging, production, etc.)
 CRAFT_ENVIRONMENT=staging
 
+# Email
+SYSTEM_EMAIL_FROM=craft@viget.com
+SYSTEM_EMAIL_HOSTNAME=
+SYSTEM_EMAIL_PORT=
+SYSTEM_EMAIL_USERNAME=
+SYSTEM_EMAIL_PASSWORD=
+
 # Database connection settings
 CRAFT_DB_DRIVER=mysql
 CRAFT_DB_SERVER=127.0.0.1
