[#20] Rename package.json & package-lock.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "craft-starter",
+  "name": "viget-craft-starter",
   "version": "1.0.0",
   "author": "Viget <craft@viget.com>",
   "type": "module",
