--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,7 @@
   "scripts": {
     "post-create-project-cmd": [
       "@php -r \"file_exists('.env') || copy('.env.example.dev', '.env');\"",
-      "@php install-scripts/rename-ddev.php",
+      "@php composer-scripts/post-create-project.php",
       "echo 'Cleaning composer.json'",
       "@composer config --unset scripts.post-create-project-cmd",
       "@composer config --unset name",
@@ -52,7 +52,7 @@
       "@composer config --unset type",
       "@composer update --ignore-platform-reqs",
       "@composer dump-autoload -o",
-      "rm -rf install-scripts "
+      "rm -rf composer-scripts"
     ],
     "post-root-package-install": [
       "@php -r \"file_exists('.env') || copy('.env.example.dev', '.env');\""
